--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-cookies/cookies": "^6.2.1",
+    "@react-navigation/stack": "^7.0.18",
+    "axios": "^1.7.8",
+    "invariant": "^2.2.4",
     "react": "18.3.1",
     "react-native": "0.76.3",
     "react-native-webview": "^13.12.5"
