--- a/package.json
+++ b/package.json
@@ -13,11 +13,22 @@
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-cookies/cookies": "^6.2.1",
+    "@react-navigation/elements": "^2.2.4",
+    "@react-navigation/native": "^7.0.13",
     "@react-navigation/stack": "^7.0.18",
     "axios": "^1.7.8",
     "invariant": "^2.2.4",
     "react": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-async-storage": "^0.0.1",
+    "react-native-ble-plx": "^3.2.0",
+    "react-native-file-viewer": "^2.1.5",
+    "react-native-gesture-handler": "^2.21.2",
+    "react-native-permissions": "^5.2.1",
+    "react-native-print": "^0.11.0",
+    "react-native-reanimated": "^3.16.3",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^4.3.0",
     "react-native-webview": "^13.12.5"
   },
   "devDependencies": {
